--- a/app/src/main/res/layout/content_business__home.xml
+++ b/app/src/main/res/layout/content_business__home.xml
@@ -8,7 +8,7 @@
     tools:showIn="@layout/app_bar_main">
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,7 +27,7 @@
                 android:id="@+id/custom_fields_list"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_weight="0"
                 android:visibility="invisible"/>
 
             <ImageView
@@ -44,10 +44,77 @@
                 android:layout_centerHorizontal="true"
                 android:visibility="invisible"/>
             <TextView
-                android:id="@+id/places_temp_results"
+                android:id="@+id/places_name"
+                android:textSize="30dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/text_margin" />
+                />
+            <TextView
+                android:id="@+id/places_review"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="___Reviews Place Holder___"/>
+            <TextView
+                android:id="@+id/places_type"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:id="@+id/places_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:autoLink="map"/>
+            <TextView
+                android:id="@+id/places_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:textColor="@color/colorAccent"
+                android:autoLink="phone" />
+            <TextView
+                android:id="@+id/places_website"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorAccent"
+                android:autoLink="web" />
+            <TextView
+                android:id="@+id/places_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:id="@+id/places_attribution"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+            <LinearLayout
+                android:paddingTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/review_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="180dp"
+                    android:text="Reviews"
+                    android:textSize="20dp" />
+
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:paddingRight="0dp"
+                    android:text="Add Review" />
+
+            </LinearLayout>
+
+
         </LinearLayout>
 
     </ScrollView>
