updated business home to work with nearby search

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -66,11 +66,11 @@
             android:layout_centerHorizontal="true"
             android:visibility="invisible" />
 
-        <TextView
-            android:id="@+id/response"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textIsSelectable="true" />
+        <!--<TextView-->
+            <!--android:id="@+id/response"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textIsSelectable="true" />-->
 
 
         <ScrollView
@@ -83,6 +83,54 @@
                 android:orientation="vertical">
 
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    >
+
+                    <Button
+                        android:id="@+id/button_restaurant_nearby"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Restaurant"
+                        android:textSize="9dp"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:drawableTop="@drawable/ic_menu_share"
+                    />
+                    <Button
+                        android:id="@+id/button_hotel_nearby"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Hotel"
+                        android:textSize="9dp"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:drawableTop="@drawable/ic_menu_share"
+                        />
+                    <Button
+                        android:id="@+id/button_amusement_nearby"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Amusement"
+                        android:textSize="9dp"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:drawableTop="@drawable/ic_menu_share"
+                        />
+                    <Button
+                        android:id="@+id/button_favorites"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Favorite"
+                        android:textSize="9dp"
+                        android:textColor="@color/quantum_white_text"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:drawableTop="@drawable/ic_menu_share"
+                        />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/lat_long"
