--- a/app/src/main/res/layout/content_business__home.xml
+++ b/app/src/main/res/layout/content_business__home.xml
@@ -43,12 +43,18 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:visibility="invisible"/>
+            
             <TextView
                 android:id="@+id/places_name"
                 android:textSize="30dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
+            <ProgressBar
+                android:id="@+id/dataloading"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/places_review"
                 android:layout_width="wrap_content"
