added some review functionality

--- a/app/src/main/res/layout/content_business__home.xml
+++ b/app/src/main/res/layout/content_business__home.xml
@@ -59,10 +59,12 @@
                 android:id="@+id/places_review"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="___Reviews Place Holder___"/>
+                android:text="___Reviews Place Holder___"
+               />
             <TextView
                 android:id="@+id/places_type"
-                android:textSize="15dp"
+                android:textSize="10dp"
+                android:layout_margin="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
@@ -70,6 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
+                android:layout_marginTop="5dp"
                 >
 
                 <Button
@@ -77,9 +80,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textSize="1sp"
+                    android:textSize="0sp"
                     android:backgroundTint="@color/quantum_white_text"
-                    android:textColor="@color/quantum_white_text"
+                    android:textColor="@color/invisibleAccent"
                     android:drawableTop="@drawable/phone"
                     android:autoLink="phone"
                     />
@@ -88,9 +91,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textSize="1sp"
+                    android:textSize="0sp"
                     android:backgroundTint="@color/quantum_white_text"
-                    android:textColor="@color/quantum_white_text"
+                    android:textColor="@color/invisibleAccent"
                     android:drawableTop="@drawable/earth"
                     android:autoLink="web"
                     />
@@ -99,42 +102,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textSize="1sp"
+                    android:textSize="0sp"
                     android:backgroundTint="@color/quantum_white_text"
-                    android:textColor="@color/quantum_white_text"
+                    android:textColor="@color/invisibleAccent"
                     android:drawableTop="@drawable/map_marker"
                     android:autoLink="map"
                     />
             </LinearLayout>
-            <!--<TextView-->
-                <!--android:id="@+id/places_address"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:textColor="@color/colorAccent"-->
-                <!--android:autoLink="map"/>-->
-            <!--<TextView-->
-                <!--android:id="@+id/places_phone"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:ems="10"-->
-                <!--android:textColor="@color/colorAccent"-->
-                <!--android:autoLink="phone" />-->
-            <!--<TextView-->
-                <!--android:id="@+id/places_website"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:textColor="@color/colorAccent"-->
-                <!--android:autoLink="web" />-->
-            <!--<TextView-->
-                <!--android:id="@+id/places_price"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--/>-->
-            <!--<TextView-->
-                <!--android:id="@+id/places_attribution"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--/>-->
+
 
             <LinearLayout
                 android:paddingTop="20dp"
@@ -155,13 +130,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorPrimary"
+                    android:onClick="openReview"
                     android:paddingRight="0dp"
-                    android:text="Add Review"
-                    />
+                    android:text="Add Review" />
+
+
 
             </LinearLayout>
 
-
+            <ListView
+                android:id="@+id/list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
     </ScrollView>
