--- a/app/src/main/res/layout/content_business__home.xml
+++ b/app/src/main/res/layout/content_business__home.xml
@@ -51,24 +51,27 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:visibility="invisible" />
-
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp">
             <TextView
                 android:id="@+id/places_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="30dp" />
+            <ImageView
+                android:id="@+id/review_image"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:layout_marginLeft="100dp"
 
-            <ProgressBar
-                android:id="@+id/dataloading"
-                style="?android:attr/progressBarStyleSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/places_review"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="___Reviews Place Holder___" />
+                android:paddingRight="5dp"
+                app:srcCompat="@drawable/help_circle_outline" />
+        </LinearLayout>
 
             <TextView
                 android:id="@+id/places_type"
@@ -76,6 +79,11 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:textSize="10dp" />
+            <ProgressBar
+                android:id="@+id/dataloading"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -122,7 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:paddingTop="20dp">
+                android:paddingTop="15dp">
 
                 <TextView
                     android:id="@+id/review_label"
