--- a/app/src/main/res/layout/food_listview.xml
+++ b/app/src/main/res/layout/food_listview.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginLeft="100dp"
+                android:layout_marginLeft="130dp"
                 android:textSize="18dp"
                 android:text="Grade:" />
 
@@ -61,7 +61,14 @@
             android:layout_height="wrap_content"
             android:layout_margin="13dp"
             android:layout_marginLeft="20dp"
-            android:textSize="18dp"
+            android:textSize="15dp"
+            android:text="No Review" />
+        <TextView
+            android:id="@+id/reviewed_categories"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:textSize="10dp"
             android:text="No Review" />
 
 
