--- a/app/src/main/res/layout/content_business__home.xml
+++ b/app/src/main/res/layout/content_business__home.xml
@@ -41,8 +41,8 @@
             <ImageView
                 android:id="@+id/photo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/material_grey_300" />
+                android:layout_height="160dp"
+                android:background="@color/quantum_white_text" />
 
             <ProgressBar
                 android:id="@+id/loading"
@@ -67,7 +67,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:layout_marginLeft="100dp"
+                android:layout_marginLeft="20dp"
 
                 android:paddingRight="5dp"
                 app:srcCompat="@drawable/help_circle_outline" />
