--- a/app/src/main/res/layout/nearby_listview.xml
+++ b/app/src/main/res/layout/nearby_listview.xml
@@ -1,32 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <ImageView
             android:id="@+id/photo"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:background="@color/material_grey_300" />
+            android:layout_height="160dp"
+            android:background="@color/quantum_white_text" />
 
         <TextView
             android:id="@+id/places_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Name" />
+            android:text="Name"
+            android:textSize="20dp"
+            android:textStyle="bold"/>
 
-        <TextView
-            android:id="@+id/places_review"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Review Holder" />
 
         <TextView
             android:id="@+id/places_address"
